SQLExecutor 可以指定转换器